[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyparallax"
version = "0.2.0"
description = "A lightweight, zero-trust Tier 0 Shield gateway for AI Agents."
authors = [
    { name = "Vibe Coder", email = "vibe@example.com" }
]
dependencies = [
    "pydantic>=2.0.0"
]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
parallax = "pyparallax.__init__:main"

[tool.setuptools]
packages = ["pyparallax"]

[tool.pytest.ini_options]
testpaths = ["tests"]